fix(frontend): increase contrast of gray font colour

--- a/frontend/src/assets/stylesheets/main.scss
+++ b/frontend/src/assets/stylesheets/main.scss
@@ -528,7 +528,7 @@ main.projects {
     h1 {
       width: 100%;
       small {
-        color: gray;
+        color: $darkgray;
         font-size: 0.6em;
         font-weight: normal;
       } //small
